[package]
name = "input-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
kernel32-sys = "0.2.1"
serde = { version = "1.0", features = ["derive", "rc"] }
winapi = { version = "0.3.9", features = ["winuser", "impl-default"] }

[dependencies.winrt]
version = "0.4.0"
features = ["windows-system", "windows-ui", "windows-data"]